correction beug et ajout modale

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -7,6 +7,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 	<meta name="description" content="portfolio">
 	<link rel="stylesheet" href="./assets/style.css">
 	
@@ -23,7 +24,7 @@
 	<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
         <nav>
             <ul>
-                <li><a href="#portfolio">portfolio</a></li>
+                <li><a href="#portfolio">projets</a></li>
                 <li><a href="#contact">contact</a></li>
                 <li id="login-link" class="login-link"><a href="./login.html">login</a></li>
                 <li id="logout-link" class="logout"><a href="#">logout</a></li>
@@ -94,8 +95,10 @@
 			<a class="js-modal-trigger" href="#modal">modifier</a>
 		</div>
 	</div>
-	<div class="filters"></div>
-	<div class="gallery"></div>
+	<div class="filters">
+	</div>
+	<div class="gallery">
+	</div>
 </section>
 <!--PARTIE CONTACT-->
 <section id="contact">
