correction filtre dynamique dans la modal

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -50,7 +50,7 @@
 		<section id="modal" class="modal" aria-modal="false" role="dialog">
 			<div id="modal-content" class="modal-content">
 				<i class="fa-solid fa-xmark js-modal-close close-icon"></i>
-				<h3>Gallerie photo</h3>
+				<h3>Galerie photo</h3>
 			<div class="gallery-modal" id="modal-gallery"></div>
 			<div class="add">
 				<button type="button" id="new-photo">Ajouter une photo</button>
@@ -95,9 +95,9 @@
 			<a class="js-modal-trigger" href="#modal">modifier</a>
 		</div>
 	</div>
-	<div class="filters">
+	<div class="filters"><!--generer dynamiquement avec javascript-->
 	</div>
-	<div class="gallery">
+	<div class="gallery"><!--generer dynamiquement avec javascript-->
 	</div>
 </section>
 <!--PARTIE CONTACT-->
